--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,5 +3,5 @@
   <br>
   <a href="/logout">Logout</a>
 {% else %}
-  <a href="{% url 'social:begin' backend='linkedin-oauth2' %}">Login with Linkedin</a>
+  <a href="{% url 'social:begin' backend='linkedin-oauth2' %}?next={{ request.path }}">Login with Linkedin</a>
 {% endif %}
