--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,12 +1,1 @@
-<!-- <div class="column small-8 small-centered">
-	<h1>Form</h1>
-
-	<form method="POST" action="" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{ form.as_p }}
-
-		<input type="submit" class="button" value="Create post">
-	</form>
-</div> -->
-
-{{ first_name }}
+<img src="{{ profile_picture }}">\
