--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,35 +2,38 @@
 
 <!DOCTYPE html>
 <html>
-	<head>
-	<title>
-		{% block head_title %} 
-		Auth
-		{% endblock head_title %}
-	</title>
-	<!-- Foundation css -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
-	<!-- App css -->
-	<link rel="stylesheet" href="{% static 'css/base.css' %}">
-	</head>
-	<body>
-		<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+  <head>
+  <title>
+    {% block head_title %} 
+    Auth
+    {% endblock head_title %}
+  </title>
+  <!-- Foundation css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.css">
+  <!-- App css -->
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  </head>
+  <body>
+    <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
 
-		<div class="container">
-			{% block content %}
-			{% endblock content%}
-		</div>
-		<!-- Jquery js -->
-		<script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
-		<!-- Foundation js -->
-		<script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
-	</body>
+    <div class="container">
+      {% block content %}
+      {% endblock content%}
+    </div>
+    {% block afterbody %}
+    
+    {% endblock afterbody %}
+    <!-- Jquery js -->
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <!-- Foundation js -->
+    <script src="https://cdn.jsdelivr.net/foundation/6.1.2/foundation.min.js"></script>
+  </body>
 </html>
