--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,9 +9,9 @@
 		<option value="#">Select an user type</option>
 		<option value="{% url 'app:home' %}">Home</option>
 		<option value="{% url 'app:test' %}">Test</option>
-		<option value="{% url 'chat:main' %}">Chat</option>
+		<option value="{% url 'chat:new_room' %}">New room(Random name)</option>
 	</select>
-	<input type="button" onClick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="GO">
+	<!-- <input type="button" onClick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="GO"> -->
 	</form>
 </p>
   <br>
