--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,9 +7,9 @@
 	<form name="jump" class="center">
 	<select onchange="location = this.options[this.selectedIndex].value;">
 		<option value="#">Select an user type</option>
-		<option value="{% url 'app:home' %}">Home</option>
-		<option value="{% url 'app:test' %}">Test</option>
-		<option value="{% url 'chat:new_room' %}">New room(Random name)</option>
+		<option value="{% url 'app:home' %}">Welcome if logged in with 3rd party</option>
+		<option value="{% url 'app:test' %}">Test for getting Linkedin profile pic</option>
+		<option value="{% url 'chat:new_room' %}">New room with random name</option>
 	</select>
 	<!-- <input type="button" onClick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="GO"> -->
 	</form>
