--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -34,7 +34,7 @@
 {% endblock content %}
 
 {% block afterbody %}
- <!-- <script type="text/javascript" src='{% static "js/jquery-1.12.1.min.js" %}'></script>
+  <script type="text/javascript" src='{% static "js/jquery-1.12.1.min.js" %}'></script>
   <script type="text/javascript" src='{% static "js/reconnecting-websocket.min.js" %}'></script>
-  <script type="text/javascript" src='{% static "js/chat.js" %}'></script> -->
+  <script type="text/javascript" src='{% static "js/chat.js" %}'></script>
 {% endblock afterbody %}
