--- a/chat/templates/room.html
+++ b/chat/templates/room.html
@@ -6,9 +6,9 @@
     Anyone with this URL can join the room and chat: 
     <code>{{ request.scheme }}://{{ request.get_host }}/{{ room.label }}</code> 
   </p>
+  <p>{{ room.name }}</p>
   <p>
     <label for="handle">Your name:</label>
-    <!-- <input id="handle" type="text" placeholder="handle"> -->
     <h4 id="handle">{{ request.user.username }}</h4>
   </p>
   <form id="chatform">
