Dealt with whitespace and max charcount per line

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
   }(document, 'script', 'facebook-jssdk'));</script>
 
 
-    <div class="container">
+    <div class="container row">
       {% block content %}
       {% endblock content%}
     </div>
